# svsm

./: .env  Cargo.toml  Makefile  build-init.sh  fs.file  todo.txt
elf/src/: load_segments.rs
init/: init  init.S  stage1.lds
kernel/: Cargo.toml  build.rs
kernel/src/: svsm.rs  testing.rs
kernel/src/cpu/: gdt.rs  mod.rs  percpu.rs  shadow_stack.rs  smp.rs  vmsa.rs
kernel/src/cpu/idt/: common.rs  entry.S  svsm.rs
kernel/src/locking/: mod.rs  once_lock.rs
kernel/src/mm/: address_space.rs  pagetable.rs
kernel/src/mm/vm/mapping/: shadow_stack.rs
kernel/src/task/: schedule.rs  tasks.rs
stage2/: Cargo.toml  build.rs
stage2/src/: address.rs  config.rs  error.rs  fw_cfg.rs  fw_meta.rs  igvm_params.rs  lib.rs  stage2.rs  string.rs  types.rs
stage2/src/acpi/: tables.rs
stage2/src/cpu/: control_regs.rs  efer.rs  gdt.rs  irq_state.rs  mod.rs  msr.rs  percpu.rs  registers.rs  tlb.rs  tss.rs  vc.rs
stage2/src/cpu/idt/: common.rs  mod.rs  stage2.rs
stage2/src/insn_decode/: decode.rs  insn.rs  mod.rs
stage2/src/locking/: common.rs  mod.rs  rwlock.rs  spinlock.rs
stage2/src/mm/: address_space.rs  alloc.rs  mod.rs  pagebox.rs  pagetable.rs  validate.rs
stage2/src/platform/: mod.rs  native.rs  snp.rs  tdp.rs
stage2/src/sev/: ghcb.rs  mod.rs  msr_protocol.rs  status.rs  utils.rs  vmsa.rs
stage2/src/utils/: immut_after_init.rs  memory_region.rs  mod.rs  util.rs
