[package]
name = "stage2"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

[[bin]]
name = "stage2"
path = "src/stage2.rs"
test = false

[dependencies]
bootlib.workspace = true
cpuarch.workspace = true
elf.workspace = true

bitflags.workspace = true
igvm_defs = { workspace = true, features = ["unstable"] }
log = { workspace = true, features = ["max_level_info", "release_max_level_info"] }
zerocopy.workspace = true

[target."x86_64-unknown-none".dev-dependencies]
test.workspace = true

[dev-dependencies]

[lints]
workspace = true
